# gitsmartcommit

./: .gitignore  .gitsmartcommit.example.toml  .gitsmartcommit.toml  .markdownlint.yml  .mise.toml  CHANGELOG.md  COMMIT_BATCHING_IMPROVEMENTS.md  COMMIT_DESCRIPTION_IMPROVEMENTS.md  README.md  TEST_COVERAGE_REPORT.md  VERSION_MANAGEMENT_GUIDE.md  pyproject.toml  update.fish  update.sh
context_portal/: context.db
context_portal/conport_vector_data/: chroma.sqlite3
docs/: design_patterns.md
gitsmartcommit/: __init__.py  cli.py  commands.py  commit_message.py  config.py  core.py  factories.py  models.py  observers.py  prompts.py  smart_commit.py  version.py
gitsmartcommit/commands/: __init__.py  base.py  commit.py  merge.py  push.py  upstream.py
gitsmartcommit/commit_message/: __init__.py  generator.py  strategy.py  validation.py  validator.py
scripts/: bump_version.py  install_global.py  update_gitsmartcommit.py  update_global.py
tests/: conftest.py  test_batching.py  test_cli.py  test_commands.py  test_commit_descriptions.py  test_config.py  test_core.py  test_deleted_files.py  test_edge_cases.py  test_factories.py  test_integration.py  test_performance.py  test_security.py  test_smart_commit.py  test_summary.py  test_validation.py
