[project]
name = "gitsmartcommit"
version = "0.1.2"
description = "AI-enhanced Git commit tool that intelligently analyzes and groups changes"
authors = [
    { name = "Mike Earley" }
]
dependencies = [
    "gitpython>=3.1.44",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.0.19",
    "rich>=13.0.0",  # For nice terminal output
    "click>=8.0.0",  # For CLI interface
    "asyncio>=3.4.3",  # For async/await support
    "tomli>=2.0.0",
    "tomli-w>=1.0.0",
    "pyperclip>=1.8.2",  # For clipboard operations
    "google-generativeai>=0.3.2",  # For Google Gemini support
    "qwen>=0.0.1",  # For Qwen model support
    "httpx>=0.24.0",  # For Ollama API integration
    "nest-asyncio>=1.5.0",  # For nested event loops in tests
    "packaging>=21.0",  # For version comparison
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
git-smart-commit = "gitsmartcommit.cli:main"
git-smart = "gitsmartcommit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "0.1.2"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
